testing bug fix on iphone

--- a/main.css
+++ b/main.css
@@ -193,7 +193,7 @@ img {
 
   #section2 {
     /* padding-right: 50px; */
-    text-align: center;
+    /* text-align: center; */
     margin-bottom: -150px;
   }
 
